# django-overcomingbias-api

./: .coveragerc  .dockerignore  .gitignore  LICENSE  README.rst  manage.py  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.github/workflows/: main.yml  release.yml  run-tests.yml
docs/source/: changelog.rst  conf.py  contact.rst  contents.rst  getting-started.rst  index.rst  license.rst
docs/source/_templates/: links.html  sidebarintro.html  sidebartoc.html
obapi/: admin.py  apps.py  assemble.py  converters.py  download.py  exceptions.py  export.py  formfields.py  forms.py  modelfields.py  tasks.py  tidy.py  urls.py  utils.py  validators.py
obapi/migrations/: 0001_initial.py  0002_alter_contentitem_download_timestamp_and_more.py  0002_sequence_slug_alter_contentitem_download_timestamp_and_more.py  0003_alter_contentitem_title_and_more.py  0003_remove_authoralias_authoralias_is_unique_and_more.py  0004_alter_authoralias_text_alter_ideaalias_text_and_more.py  0004_essaycontentitem.py  0005_author_slug_idea_slug_tag_slug_topic_slug.py  0005_sequence_create_timestamp_sequence_update_timestamp.py  0006_alter_sequence_options.py  0006_alter_sequence_slug.py  0007_rename_description_sequence_abstract.py
obapi/models/: __init__.py  classifiers.py  content.py  sequence.py
obapi/templates/admin/obapi/: add_form.html
obapi/templates/admin/obapi/obcontentitem/: change_list.html
obapi/templates/obapi/export/: base.html  contentitem.html  essaycontentitem.html  metadata.md  obcontentitem.html  spotifycontentitem.html  youtubecontentitem.html
tests/: conftest.py  markers.py  sample_data.py  test_add.py  test_classifiers.py  test_content.py  test_download.py  test_export.py  test_sequence.py  test_settings.py  test_tidy.py  test_utils.py
