[metadata]
name = django-overcomingbias-api
description = django-overcomingbias-api: an API to Robin Hanson's content
long_description = file: README.rst
long_description_content_type = text/x-rst
# url = https://django-overcomingbias-api.readthedocs.io/
author = Christopher McDonald
author_email = cmcdonal33@gmail.com
license = MIT
license_file = LICENSE
platforms = win32, linux, osx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
#    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
#    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4
    Framework :: Django :: 4.0
keywords = django, overcomingbias, api, scrape
# project_urls =
#      Changelog = https://django-overcomingbias-api.readthedocs.io/en/stable/changelog.html
#      Source = https://github.com/chris-mcdo/django-overcomingbias-api
#      Tracker = https://github.com/chris-mcdo/django-overcomingbias-api/issues

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
install_requires = 
    obscraper
    bleach>=5.0.0
    Django>=4.0,<5.0
    django-model-utils>=4.2.0
    django-ordered-model>=3.5
    python-slugify>=5.0
    python-dateutil>=2.7
    pandadoc
zip_safe = False

[flake8]
max-line-length = 88
extend-ignore = E203

[tool.isort]
profile = "black"
